--- a/1-node-farm/templates/template-card.html
+++ b/1-node-farm/templates/template-card.html
@@ -1,5 +1,5 @@
 <figure class="card">
-  <div class="card__emoji">{%IMAGE%%}{%IMAGE%%}</div>
+  <div class="card__emoji">{%IMAGE%}{%IMAGE%}</div>
 
   <div class="card__title-box">
     <h2 class="card__title">{%PRODUCTNAME%}</h2>
@@ -7,7 +7,7 @@
 
   <div class="card__details">
     <div class="card__detail-box {%NOT_ORGANIC%}">
-      <h6 class="card__detail card__detail--organic">{%ORGANIC%}</h6>
+      <h6 class="card__detail card__detail--organic">Organic!</h6>
     </div>
 
     <div class="card__detail-box">
