Parsing Variables from URLs

--- a/1-node-farm/templates/template-product.html
+++ b/1-node-farm/templates/template-product.html
@@ -271,7 +271,7 @@
 
       <figure class="product">
         <div class="product__organic {%NOT_ORGANIC%}"><h5>ORGANIC</h5></div>
-        <a href="#" class="product__back">
+        <a href="/overview" class="product__back">
           <span class="emoji-left">👈</span>BACK
         </a>
         <div class="product__hero">
